--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
   },
   "homepage": "https://github.com/vankur017/BiteBuddy#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "cssnano": "^7.0.5",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.41",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.2.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "base": "^3.0.0",
+    "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0"
   }
 }
