--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "cssnano": "^7.0.5",
     "parcel": "^2.12.0",
     "postcss": "^8.4.41",
+    "postcss-custom-properties": "^14.0.1",
+    "postcss-url": "^10.1.3",
     "process": "^0.11.10",
-    "tailwindcss": "^3.2.0"
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
