--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   },
   "homepage": "https://github.com/vankur017/BiteBuddy#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
     "cssnano": "^7.0.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.41",
     "process": "^0.11.10",
@@ -27,6 +35,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/jest-dom": "^6.5.0",
     "base": "^3.0.0",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
