--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^6.5.0",
     "base": "^3.0.0",
+    "firebase": "^10.13.1",
     "framer-motion": "^11.3.28",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
