--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,23 +34,20 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
-    "@chakra-ui/icons": "latest",
-    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^6.5.0",
     "axios": "^1.7.7",
     "base": "^3.0.0",
     "firebase": "^10.13.1",
-    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "glob": "^11.0.0",
     "parcel": "^2.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.28.0",
     "react-stripe-checkout": "^2.6.3"
   }
 }
