--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@parcel/transformer-react-refresh-wrap": "^2.15.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
@@ -29,6 +30,7 @@
     "cssnano": "^7.0.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.15.4",
     "postcss": "^8.4.41",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.10"
@@ -39,13 +41,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "base": "^3.0.0",
+    "emailjs": "^4.0.3",
     "firebase": "^10.13.1",
     "framer-motion": "^4.1.17",
     "glob": "^11.0.0",
-    "parcel": "^2.12.0",
+    "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-stripe-checkout": "^2.6.3"
