--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "axios": "^1.7.7",
     "base": "^3.0.0",
     "emailjs": "^4.0.3",
-    "firebase": "^10.13.1",
+    "firebase": "^12.0.0",
     "framer-motion": "^4.1.17",
     "glob": "^11.0.0",
     "lucide-react": "^0.525.0",
@@ -50,8 +50,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.17.0",
     "react-stripe-checkout": "^2.6.3"
   }
 }
