updated backend and deployed on firebase functions, implemented the code on UI

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
     "default": "bitebuddy-743a4",
-    "staging": "bitebuddy-743a4"
+    "staging": "bitebuddy-39ffc"
   },
   "targets": {},
   "etags": {}
