--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,23 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "frontend/dist",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "api"
+      }
     ]
   },
   "functions": [
     {
       "source": "functions",
       "codebase": "default",
+      "runtime": "nodejs22",   
       "ignore": [
         "node_modules",
         ".git",
