--- a/functions/package.json
+++ b/functions/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
-    "nodemailer": "^6.9.15",
+    "firebase-functions": "^6.4.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
     "stripe": "^17.2.1",
     "uuid": "^10.0.0"
