updated pagination logic in store page

--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
       {
         "source": "/api/**",
         "function": "api"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   },
@@ -17,7 +21,7 @@
     {
       "source": "functions",
       "codebase": "default",
-      "runtime": "nodejs22",   
+      "runtime": "nodejs22",
       "ignore": [
         "node_modules",
         ".git",
