--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@parcel/transformer-babel": "^2.15.4",
     "@parcel/transformer-react-refresh-wrap": "^2.15.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
