--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     - cron: "0 8 * * *"   # Runs daily at 08:00 UTC
   workflow_dispatch:       # Allow manual trigger from Actions tab
 
+permissions:
+  contents: read
+  security-events: read
+
 jobs:
   fetch-alerts:
     runs-on: ubuntu-latest
@@ -19,6 +23,7 @@ jobs:
                -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                https://api.github.com/repos/${{ github.repository }}/secret-scanning/alerts \
                > secret-alerts.json
+          cat secret-alerts.json   # 👈 debug print
           echo "Saved alerts to secret-alerts.json"
 
       - name: Convert JSON to CSV
@@ -33,6 +38,7 @@ jobs:
             .html_url
           ] | @csv' secret-alerts.json >> secret-alerts.csv
           echo "Saved alerts to secret-alerts.csv"
+          cat secret-alerts.csv   # 👈 debug print
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
