--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
 
 permissions:
   contents: read
-  security-events: read
 
 jobs:
   fetch-alerts:
@@ -20,11 +19,11 @@ jobs:
       - name: Fetch open secret scanning alerts (JSON)
         run: |
           curl -s -H "Accept: application/vnd.github+json" \
-               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-               https://api.github.com/repos/${{ github.repository }}/secret-scanning/alerts \
+               -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
+               "https://api.github.com/repos/${{ github.repository }}/secret-scanning/alerts?per_page=100" \
                > secret-alerts.json
-          cat secret-alerts.json   # 👈 debug print
           echo "Saved alerts to secret-alerts.json"
+          cat secret-alerts.json
 
       - name: Convert JSON to CSV
         run: |
@@ -36,9 +35,9 @@ jobs:
             (.resolution // "unresolved"),
             .created_at,
             .html_url
-          ] | @csv' secret-alerts.json >> secret-alerts.csv
+          ] | @csv' secret-alerts.json >> secret-alerts.csv || true
           echo "Saved alerts to secret-alerts.csv"
-          cat secret-alerts.csv   # 👈 debug print
+          cat secret-alerts.csv
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
