UI Update and API updated

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lecture4-foodorderningappui",
+  "name": "BiteBuddy",
   "version": "1.0.0",
   "description": "BiteBuddy",
   "scripts": {
