Shimmer UI logic udpated

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "bitebuddy-743a4",
+    "default": "bitebuddy-39ffc",
     "staging": "bitebuddy-39ffc"
   },
   "targets": {},
