--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,11 @@
     ],
     "rewrites": [
       {
-        "source": "**",
+        "source": "/api/**",       
+        "function": "api"
+      },
+      {
+        "source": "**",          
         "destination": "/index.html"
       }
     ]
