--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "parcel": "^2.15.4",
     "postcss": "^8.4.41",
     "process": "^0.11.10",
+    "redux-mock-store": "^1.5.5",
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
